--- a/Clase XI/index.html
+++ b/Clase XI/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>(Clase XII)</title>
+	<title>Borar un Elemento (Clase XI)</title>
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
