--- a/Clase XII/index.html
+++ b/Clase XII/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>(Clase XIII)</title>
+	<title>Iteración en el DOM (Clase XII)</title>
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
