--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>(Clase XV)</title>
+	<title>(Clase XVI)</title>
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
