--- a/Clase XV/index.html
+++ b/Clase XV/index.html
@@ -2,26 +2,27 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Data Attributes (Clase XIV)</title>
+	<title>Variable Caché (Clase XV)</title>
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 	<!-- Contenedor principal -->
 	<main class="">
+
 	  <!-- Sidebar -->
 	  <aside class="lateral">
 	    <img src="https://github.com/juanwmedia/flexbox/blob/master/ejercicio4/img/black-cat.jpg?raw=true" alt="Black Cats Rules!">
 
 	    <!-- Social -->
-	    <a href="#" data-rrss="correoe">
+	    <a href="#">
 	      <img src="https://github.com/juanwmedia/flexbox/blob/master/ejercicio4/img/mail.png?raw=true" alt="Correo-e">
 	      <span>Correo-e</span>
 	    </a>
-	    <a href="#" data-rrss="snapchat">
+	    <a href="#">
 	      <img src="https://github.com/juanwmedia/flexbox/blob/master/ejercicio4/img/snapchat.png?raw=true" alt="Snapchat">
 	      <span>Snapchat</span>
 	    </a>
-	    <a href="#" data-rrss="twitter">
+	    <a href="#">
 	      <img src="https://github.com/juanwmedia/flexbox/blob/master/ejercicio4/img/twitter.png?raw=true" alt="Twitter">
 	      <span>Twitter</span>
 	    </a>
@@ -29,7 +30,7 @@
 
 	  <!-- Contenido -->
 	  <section class="contenido">
-	    <h1 data-rrss="h1 contenido">Los gatos negros te dan la bienvenida</h1>
+	    <h1>Los gatos negros te dan la bienvenida</h1>
 	    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem ex aliquid pariatur ad alias necessitatibus, hic corrupti delectus. Excepturi quis incidunt ratione officia hic amet, natus tempora nesciunt ipsum, atque.</p>
 	    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem ex aliquid pariatur ad alias necessitatibus, hic corrupti delectus. Excepturi quis incidunt ratione officia hic amet, natus tempora nesciunt ipsum, atque.</p>
 	    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem ex aliquid pariatur ad alias necessitatibus, hic corrupti delectus. Excepturi quis incidunt ratione officia hic amet, natus tempora nesciunt ipsum, atque.</p>
@@ -45,7 +46,6 @@
 	</main>
 
 	<script src="https://code.jquery.com/jquery-3.1.0.js"></script>
-	<!-- <script src="../includes/js/jquery-3.1.0.min.js"></script> -->
 	<script src="js/main.js"></script>
 </body>
 </html>
