--- a/Clase XVI/index.html
+++ b/Clase XVI/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>(Clase XVII)</title>
+	<title>Event Delegation (Clase XVI)</title>
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
