--- a/Clase XVII/index.html
+++ b/Clase XVII/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>(Clase XVIII)</title>
+	<title>Filtrar Resultados con JQuery (Clase XVII)</title>
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
