--- a/Clase XVIII/index.html
+++ b/Clase XVIII/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>(Clase XIX)</title>
+	<title>slideToggle (Clase XVIII)</title>
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
