--- a/Clase XIX/index.html
+++ b/Clase XIX/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>(Clase XX)</title>
+	<title>Eventos con Raton (Clase XIX)</title>
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
