--- a/Clase XX/index.html
+++ b/Clase XX/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>(Clase XXI)</title>
+	<title>Eventos de Teclado (Clase XX)</title>
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -44,6 +44,8 @@
 	    </ul>
 	  </section>
 	</main>
+
+	<input type="text" id="field1">
 
 	<script src="https://code.jquery.com/jquery-3.1.0.js"></script>
 	<script src="js/main.js"></script>
