--- a/Clase XXI/index.html
+++ b/Clase XXI/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>(Clase XXII)</title>
+	<title>Keyboards Keycodes con JQuery (Clase XXI)</title>
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -12,6 +12,8 @@
 	  <!-- Sidebar -->
 	  <aside class="lateral">
 	    <img src="https://github.com/juanwmedia/flexbox/blob/master/ejercicio4/img/black-cat.jpg?raw=true" alt="Black Cats Rules!">
+
+		<input type="text" id="field">
 
 	    <!-- Social -->
 	    <a href="#">
