--- a/Clase XXII/index.html
+++ b/Clase XXII/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>(Clase XXIII)</title>
+	<title>Prevenir Comportamiento por defecto (Clase XXII)</title>
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -13,16 +13,21 @@
 	  <aside class="lateral">
 	    <img src="https://github.com/juanwmedia/flexbox/blob/master/ejercicio4/img/black-cat.jpg?raw=true" alt="Black Cats Rules!">
 
+		<form action="">
+			<input type="text" id="field">
+			<input type="submit" value="Enviar">
+		</form>
+
 	    <!-- Social -->
-	    <a href="#">
+	    <a href="http://www.google.es" target="_blank">
 	      <img src="https://github.com/juanwmedia/flexbox/blob/master/ejercicio4/img/mail.png?raw=true" alt="Correo-e">
 	      <span>Correo-e</span>
 	    </a>
-	    <a href="#">
+	    <a href="http://www.google.es" target="_blank">
 	      <img src="https://github.com/juanwmedia/flexbox/blob/master/ejercicio4/img/snapchat.png?raw=true" alt="Snapchat">
 	      <span>Snapchat</span>
 	    </a>
-	    <a href="#">
+	    <a href="http://www.google.es" target="_blank">
 	      <img src="https://github.com/juanwmedia/flexbox/blob/master/ejercicio4/img/twitter.png?raw=true" alt="Twitter">
 	      <span>Twitter</span>
 	    </a>
