--- a/Clase XXIII/index.html
+++ b/Clase XXIII/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>(Clase XXIV)</title>
+	<title>Manipular CSS con JQuery(Clase XXIII)</title>
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
