--- a/Clase XXIV/index.html
+++ b/Clase XXIV/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Manipular CSS con JQuery (Clase XXIII)</title>
+	<title>Manipular CSS con JQuery (Mejores Prácticas) (Clase XXIV)</title>
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
