--- a/Clase XXV/index.html
+++ b/Clase XXV/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>(Clase XXVI)</title>
+	<title>Animación con JQuery (Clase XXV)</title>
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
