--- a/Clase XXVI/index.html
+++ b/Clase XXVI/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>(Clase XXVII)</title>
+	<title>Animación con Clases CSS en JQuery (Clase XXVI)</title>
 	<link rel="stylesheet" href="css/animate.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
