Prácticas de la Clase XXXIII y ensayos en temas varios en el form con ajax (checkbox y radio)

--- a/Clase XXXII/index.html
+++ b/Clase XXXII/index.html
@@ -26,7 +26,11 @@
 	    <form name="form1" id="form1" action="#" method="post">
 	    	<input name="nombre" id="nombre" placeholder="Tu nombre" type="text">
 	    	<textarea name="mensaje" id="mensaje" placeholder="Tu mensaje"></textarea>
-	    	<input type="submit" value="Enviar mensaje">
+	    	<input type="radio" name="idioma" id="spanish" value="Spanish"><label for="spanish">Español</label>
+	    	<input type="radio" name="idioma" id="english" value="English"><label for="english">Inglés</label>
+	    	<input type="radio" name="idioma" id="italian" value="Italian"><label for="italian">Italiano</label><br />
+	    	<input type="checkbox" name="acepto" id="acepto" /><label for="acepto">Acepto los términos</label>
+	    	<input type="submit" value="Enviar mensaje" />
     	</form>
     	<ol>
     		
