Clase XXXV - Recorrer colecciones remotas

--- a/Clase XXXIV/index.html
+++ b/Clase XXXIV/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>	Qué es XSS y porqué es necesario (Clase XXXIX)</title>
+	<title>Qué es XSS y porqué es necesario (Clase XXXIV)</title>
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
